force-app/main/default/objects/Quality_Check_Machine__c/Quality_Check_Machine__c.object-meta.xml
<CustomObject>
    <label>Quality Check Machine</label>
    <nameField>
        <displayFormat>QCM-{0000000}</displayFormat>
        <label>Quality Check Machine Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quality Check Machines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>