force-app/main/default/objects/Quality_Check_Machine__c/fields/Actions_to_improve_quality__c.field-meta.xml
<CustomField>
    <fullName>Actions_to_improve_quality__c</fullName>
    <label>Actions to improve quality</label>
    <type>TextArea</type>
</CustomField>