force-app/main/default/objects/Quality_Check_Machine__c/fields/CustomerMachine__c.field-meta.xml
<CustomField>
    <fullName>CustomerMachine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Machine</label>
    <referenceTo>Customer_Machine__c</referenceTo>
    <relationshipLabel>Quality Check Machines</relationshipLabel>
    <relationshipName>Quality_Check_Machines</relationshipName>
    <type>Lookup</type>
</CustomField>