force-app/main/default/objects/Quality_Check_Machine__c/fields/EILLESTeaPresent__c.field-meta.xml
<CustomField>
    <fullName>EILLESTeaPresent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EILLES Tea Present?</label>
    <type>Checkbox</type>
</CustomField>