force-app/main/default/objects/Quality_Check_Machine__c/fields/Machine_Location__c.field-meta.xml
<CustomField>
    <fullName>Machine_Location__c</fullName>
    <label>Machine Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>