force-app/main/default/objects/Quality_Check_Machine__c/fields/Machine_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Machine_Placeholder__c</fullName>
    <label>Machine (Placeholder)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>