force-app/main/default/objects/Quality_Check_Machine__c/fields/MachineNameModel__c.field-meta.xml
<CustomField>
    <fullName>MachineNameModel__c</fullName>
    <label>Machine Name / Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>