force-app/main/default/objects/Quality_Check_Machine__c/fields/PresentationOkay__c.field-meta.xml
<CustomField>
    <fullName>PresentationOkay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presentation Okay?</label>
    <type>Checkbox</type>
</CustomField>