force-app/main/default/objects/Quality_Check_Machine__c/fields/Quality_Check__c.field-meta.xml
<CustomField>
    <fullName>Quality_Check__c</fullName>
    <label>Quality Check</label>
    <referenceTo>Quality_Check__c</referenceTo>
    <relationshipLabel>Quality Check Machines</relationshipLabel>
    <relationshipName>Quality_Check_Machines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>