force-app/main/default/objects/Quality_Check_Machine__c/fields/Recommended_Actions__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Actions__c</fullName>
    <label>Recommended Actions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Replace grinder</fullName>
            </value>
            <value>
                <fullName>Adjust machine</fullName>
            </value>
            <value>
                <fullName>Create a cleaning plan</fullName>
            </value>
            <value>
                <fullName>Schedule technician</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>