force-app/main/default/objects/Quality_Check_Machine__c/fields/WhichCompetitor__c.field-meta.xml
<CustomField>
    <fullName>WhichCompetitor__c</fullName>
    <label>Which Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>